# bayes-glib

./: .gitignore  ChangeLog  Makefile.am  Makefile.include  README  autogen.sh  bayes-glib-1.0.pc.in  configure.ac
bayes-glib/: Makefile.include  bayes-classifier.c  bayes-classifier.h  bayes-glib.h  bayes-guess.c  bayes-guess.h  bayes-storage-memory.c  bayes-storage-memory.h  bayes-storage.c  bayes-storage.h  bayes-tokenizer.c  bayes-tokenizer.h
doc/: .gitignore  Makefile.am  bayes-glib-docs.sgml
tests/: Makefile.include  test-guess.c  test-storage-memory.c
